# observatory

./: .gitignore  README.md  data.json  env.yml  pyproject.toml  requirements.txt
Grafana/: GrafanaRefresh.py
Summer_GUI/: GUI_Control.py  form.ui  main.pyproject  main_NPL072121.py  stylesheet.qss
Summer_GUI/Operator_GUI/: .main.py.kate-swp  .state_dict.kate-swp  .~lock.state_dict#  form.ui  main.py  main_NPL072121.py  state_dict
WINTER_GUI/: WINTER_GUI_Control.py  form.ui  main.pyproject  main.pyproject.user.67216a5
development/: dither_testing.txt
development/GUI/: untitled.ui
development/PyQt/: basicQApp.py  basicQApp_signalsSlotsEx.py  signal_test.py  timers_and_threads.py
development/UROP/: Get_fieldNum.py  Object_Checker.ipynb  README.txt  Simple_pandas_dataframe_from_html.ipynb  canScan.py  fieldFinder.py  form.ui  get_fields.py
development/ZTF_controls/: WINTER.tgz
development/ZTF_controls/Software/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
development/ZTF_controls/Software/Config/: common.cfg  common.cfg.in  optitemp.cfg
development/ZTF_controls/Software/src/: Makefile  cmake_install.cmake
development/ZTF_controls/Software/src/control/: Makefile  cmake_install.cmake
development/ZTF_controls/Software/src/control/ROBOD/: robod_client.h
development/ZTF_controls/Software/src/control/WATCHDOGD/: Makefile  cmake_install.cmake  watchdogd_client.h
development/ZTF_controls/Software/src/resources/: CMakeCache.txt  Makefile  cmake_install.cmake
development/ZTF_controls/Software/src/resources/Optitemp/: CMakeCache.txt  CMakeLists.txt  Makefile  chiller.cpp  chiller_interface.h  chiller_test.cpp  cmake_install.cmake
development/ZTF_controls/Software/src/utils/: CMakeLists.txt  Makefile  cmake_install.cmake  common.h  robo_client.h  robo_time.h  sensors.cpp  sensors.h
development/alerts/: gmail_messaging_test.py  slack_messaging_test.py  winterdrp_slack_test.py
development/astropy/: angle_converter.py  getting_object_coords_convert_altaz_radec.py
development/audio/: alarm.py
development/camera/: camsim_test.py  ccdproc_convenience_functions.py  fake_images.py  fake_temperature.py
development/commands/: argparse_demo.py  argparse_subcommand_demo.py  click_demo.py  cmdloop.py  cmdparse.py  decorators.py  decorators_example.py  docopt_subcommands_ex.py  getattr_function_test.py  naval_cmds.py  robo_observe_argparse_test.py  subparser_ex.py  sys_argv_test.py  wintercmd.py  wintercmd_docopt_cmd.py  wintercmd_ex.py  wrapper_function_test.py
development/config/: json_test.py  test.json  test.yaml
development/cpu_monitoring/: cpu_info_reader_test.py
development/daemon/: camerad.py  process_checker.py  pseudoWinter.py  servicepython.py  weatherd.py
development/database/: ObsWriter.py  dataconfig.json  pseudoWSP.py  pseudoWinter.py  testData.db
development/date_and_time/: MJD_to_datetime_with_astropy.py  local_time_to_mjd.py
development/dicts/: dict_getattr_test.py  dict_getattr_test2.py
development/dirfile/: GetData_Installation_README.txt  README.txt  console_application_demo.py  dirfile_maker_simple  dirfile_maker_simple.c  dirfile_maker_simple.py  dirfile_maker_simple2.py  dm.lnk  easygetdata.py  easygetdata_test.py  hk_config.yaml  pygetdata_test.py  pyqt_dirfile.py  pyqt_dirfile_eventhandler.py  pyqt_dirfile_qthread.py  pyqt_dirfile_qthread_qtimers.py  read_last_dirfile_timestamp.py
development/dithering/: center_offset.py  center_offset_sandbox.py  center_offset_simulator.py  dither_slew_time.py  dither_slew_time.txt  dither_slew_time_analysis.py  dither_spherical_geometry.py
development/ephem/: ephem_local.py  ephem_test.py
development/exceptions/: wait_for_condition_test.py
development/ezstepper/: ezstepper_test.py  ezstepper_test_EH-modified.py
development/file_creation/: make_file_if_it_doesnt_exist.py
development/files_searching/: getLatestModifiedFile_test.py
development/fits/: FITSgenerator.py  headerCreator.py
development/fitting/: polyfit_with_errors_test.py
development/focusing/: HFD_Focus.py  HFD_Focus_Test.py  HFD_Focus_Test2.py  HFD_Focus_Test_Data.txt  SampleFocus_r_20220119.txt  SampleFocus_r_20220211.txt  SampleFocus_r_20220211_190647.txt  SampleFocus_r_20220211_2.txt  SampleFocus_r_20220212_015358.txt  SampleFocus_r_20220212_032207.txt  focus_log_goodFocus_012022.json  focus_log_test.py  focus_model.py
development/guiding/: guiderGUI.ui  guider_photutils_test.py  peak_finder_test.py  zwoasi_test.py
development/image_daemon/: winter_astrometry_test.py  (+1 more)
diagrams/: multicamera_sm.dot  multicamera_sm.mmd
docs/: StateMachine.md
drivers/: Linux Release Notes_1.4.6.docx
scheduler/: README.md  check_for_schedule.py
telescope/: pwi4_client_demo_py3.py
wsp/: #watchdog_start.py#  README.md  WSP Packages Outline.docx  a_file.txt  camera.py  cli.py  current_cds_weather.txt  darkTracker.py  data.json  dataLogTest.md  demoRelational.db  module_import_test.py  observatory_operations_sequences.md  pathtest.py  plotCumulativeSchedule.py  plotCumulativeSchedule_white.py  plotLastImg.py  plotTonightSchedule.py  plotTonightSchedule.py~  plot_support.py  rerun_daily_scheduler  roboOps.md  schedule_ops_notes_npl.md  setup.md  test_rerun.py  twsp.py  watchdog_start.py  watchdog_stop.py  wsp.py  wsp_kill.py  wsp_old.py
wsp/watchdog/WINTER_software/Software/src/: CMakeLists.txt  Makefile  cmake_install.cmake
wsp/watchdog/WINTER_software/Software/src/control/: CMakeLists.txt  Makefile  cmake_install.cmake
wsp/watchdog/WINTER_software/Software/src/control/WATCHDOGD/: CMakeLists.txt  Makefile  cmake_install.cmake  watchdogd.cpp  watchdogd.h  watchdogd_server.cpp  watchdogd_server.h  watchdogd_test.cpp
wsp/watchdog/WINTER_software/Software/src/utils/: Makefile  basic.h  cmake_install.cmake  common.cpp  common.h  common.h.in  communications.cpp  communications.h  local_info.h  operations.cpp  registry.h  robo_time.cpp  state.cpp  state.h
wsp/watchdog/src/resources/: CMakeLists.txt
wsp/watchdog/src/resources/Optitemp/: chiller.h  chiller_interface.cpp  chiller_interface.h
(+5785 files in other folders)
